crates/parser/src/snapshots/parser__latex__tests__parse@color__color_set_definition_error4.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/color/color_set_definition_error4.txt
---
ROOT@0..15
  PREAMBLE@0..15
    COLOR_SET_DEFINITION@0..15
      COMMAND_NAME@0..15 "\\definecolorset"

